--- a/.github/workflows/ci-package.yml
+++ b/.github/workflows/ci-package.yml
@@ -71,14 +71,13 @@ jobs:
           export VERSION_NUMBER="2.3.$((`git log -n 1 --format=%ct` / (60*60*24)))"
           export PREFIX="cronbuild-"
         else
-            export VERSION_NUMBER=${{ github.event.inputs.version }}
-            export PREFIX="release_"
+          export VERSION_NUMBER=${{ github.event.inputs.version }}
+          export PREFIX="release_"
         fi
         if [ "${{ github.event.inputs.build }}" -ne 0 ]; then
-            export VERSION_NUMBER="${VERSION_NUMBER}-${{ github.event.inputs.build }}"
+          export VERSION_NUMBER="${VERSION_NUMBER}-${{ github.event.inputs.build }}"
         fi
         echo "::set-output name=version_number::${VERSION_NUMBER}"
-        echo "::set-output name=version_string::${PREFIX}${VERSION_NUMBER}"
 
     - name: Build Package
       working-directory: ${{ github.workspace }}
@@ -130,14 +129,13 @@ jobs:
           export VERSION_NUMBER="2.3.${PATCHLEVEL}"
           export PREFIX="cronbuild-"
         else
-            export VERSION_NUMBER=${{ github.event.inputs.version }}
-            export PREFIX="release_"
+          export VERSION_NUMBER=${{ github.event.inputs.version }}
+          export PREFIX="release_"
         fi
         if [ "${{ github.event.inputs.build }}" -ne 0 ]; then
-            export VERSION_NUMBER="${VERSION_NUMBER}-${{ github.event.inputs.build }}"
+          export VERSION_NUMBER="${VERSION_NUMBER}-${{ github.event.inputs.build }}"
         fi
         echo "::set-output name=version_number::${VERSION_NUMBER}"
-        echo "::set-output name=version_string::${PREFIX}${VERSION_NUMBER}"
 
     - name: Build Package
       working-directory: ${{ github.workspace }}
@@ -189,7 +187,6 @@ jobs:
             export VERSION_NUMBER="${VERSION_NUMBER}-${{ github.event.inputs.build }}"
         fi
         echo "::set-output name=version_number::${VERSION_NUMBER}"
-        echo "::set-output name=version_string::${PREFIX}${VERSION_NUMBER}"
 
     - name: Build Package
       working-directory: ${{ github.workspace }}
@@ -247,15 +244,16 @@ jobs:
           export OSX_VERSION_NUMBER="2.3.${OSX_PATCHLEVEL}"
           export PREFIX="cronbuild-"
         else
-            export VERSION_NUMBER=${{ github.event.inputs.version }}
-            export PREFIX="release_"
+          export VERSION_NUMBER=${{ github.event.inputs.version }}
+          export PREFIX="release_"
         fi
         if [ "${{ github.event.inputs.build }}" -ne 0 ]; then
-            export VERSION_NUMBER="${VERSION_NUMBER}-${{ github.event.inputs.build }}"
+          export VERSION_NUMBER="${VERSION_NUMBER}-${{ github.event.inputs.build }}"
         fi
+        export TAG_NAME="${PREFIX}${VERSION_NUMBER}"
         echo "::set-output name=version_number::${VERSION_NUMBER}"
         echo "::set-output name=osx_version_number::${OSX_VERSION_NUMBER}"
-        echo "::set-output name=version_string::${PREFIX}${VERSION_NUMBER}"
+        echo "::set-output name=version_string::${TAG_NAME}"
 
     - name: Create Release
       id: create_release
