--- a/.github/workflows/ci-package.yml
+++ b/.github/workflows/ci-package.yml
@@ -245,7 +245,7 @@ jobs:
         if test -z "${{ github.event.inputs.version }}"; then
           export VERSION_NUMBER="2.3.$((`git log -n 1 --format=%ct` / (60*60*24)))"
           export OSX_PATCHLEVEL=$((`git log -n 1 --format=%ct` / (60*60*24)))
-          export OSX_PATCHLEVEL=$(((PATCHLEVEL %200) + 56))
+          export OSX_PATCHLEVEL=$(((OSX_PATCHLEVEL % 200) + 56))
           export OSX_VERSION_NUMBER="2.3.${OSX_PATCHLEVEL}"
           export PREFIX="cronbuild-"
         else
