--- a/.github/workflows/ci-clang.yml
+++ b/.github/workflows/ci-clang.yml
@@ -1,5 +1,5 @@
 # **********************************************************
-# Copyright (c) 2020 Google, Inc.  All rights reserved.
+# Copyright (c) 2020-2021 Google, Inc.  All rights reserved.
 # **********************************************************
 
 # Dr. Memory: the memory debugger
@@ -58,7 +58,9 @@ jobs:
 
     # Install multilib for non-cross-compiling Linux build:
     - name: Create Build Environment
-      run: sudo apt-get -y install doxygen jsonlint g++-multilib
+      run: |
+        sudo apt-get update
+        sudo apt-get -y install doxygen jsonlint g++-multilib
 
     - name: Run Suite
       working-directory: ${{ github.workspace }}
